--- a/package.json
+++ b/package.json
@@ -5,21 +5,32 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.0",
     "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
+    "hamburger-react": "^2.5.0",
+    "moment": "^2.29.3",
     "react": "^18.1.0",
+    "react-big-calendar": "^1.2.1",
     "react-bootstrap": "^2.4.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.1.0",
     "react-id-generator": "^3.0.2",
+    "react-intl-currency-input": "^0.2.6",
+    "react-native-currency-input": "^1.0.1",
+    "react-native-masked-text": "^1.13.0",
     "react-native-web": "^0.17.7",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
