--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [build]
 base = "./"
+command = "npm config set legacy-peer-deps true"
+command = "npm i"
 command = "CI= npm run build "
 publish = "./build/"
