--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
 base = "./"
-command = "CI= npm install --legacy-peer-deps npm run build"
+command = "CI= npm run build"
 publish = "./build/"
 
