--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "build": "^0.1.4",
     "date-fns": "^2.28.0",
     "hamburger-react": "^2.5.0",
     "moment": "^2.29.3",
+    "npm": "^8.17.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.2.1",
     "react-bootstrap": "^2.4.0",
@@ -31,6 +33,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "run": "^1.4.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
