--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 /.pnp
 .pnp.js
 
+.netlify
+
 # testing
 /coverage
 
@@ -22,3 +24,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
+
+# Local Netlify folder
+.netlify
